--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MouthUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MouthUserControl.xaml
@@ -17,7 +17,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Canvas Grid.Row="0" Background="White">
+        <Canvas Grid.Row="0" Background="White" SnapsToDevicePixels="True">
             <Path x:Name="toothCardPath" Stroke="Black" StrokeThickness="2" />
         </Canvas>
         <ListBox Grid.Row="0" x:Name="_mouthListBox"
@@ -40,6 +40,7 @@
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                     <Setter Property="VerticalContentAlignment" Value="Stretch"/>
                     <Setter Property="Background" Value="Transparent"/>
+                    <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type ListBoxItem}">
@@ -100,43 +101,53 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
-                        <Viewbox Width="30" Margin="-1,-1,0,0">
-                            <Grid>
-                                <Rectangle StrokeThickness="1" >
-                                    <Rectangle.Style>
-                                        <Style TargetType="{x:Type Rectangle}">
-                                            <Setter Property="Fill" Value="White"/>
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding IsChanged}" Value="True">
-                                                    <Setter Property="Stroke" Value="Black"/>
-                                                </DataTrigger>
-                                                <DataTrigger Binding="{Binding IsValid}" Value="False">
-                                                    <Setter Property="StrokeDashArray" Value="1 1"/>
-                                                </DataTrigger>
-                                                <MultiDataTrigger>
-                                                    <MultiDataTrigger.Conditions>
-                                                        <Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListBoxItem}, Path=IsSelected}" Value="True"/>
-                                                        <Condition Binding="{Binding IsChanged}" Value="false"/>
-                                                    </MultiDataTrigger.Conditions>
-                                                    <Setter Property="Stroke" Value="Gray"/>
-                                                    <Setter Property="Fill" Value="LightGray"/>
-                                                </MultiDataTrigger>
-                                                <MultiDataTrigger>
-                                                    <MultiDataTrigger.Conditions>
-                                                        <Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListBoxItem}, Path=IsSelected}" Value="True"/>
-                                                        <Condition Binding="{Binding IsChanged}" Value="True"/>
-                                                    </MultiDataTrigger.Conditions>
-                                                    <Setter Property="Stroke" Value="Black"/>
-                                                    <Setter Property="Fill" Value="LightGray"/>
-                                                </MultiDataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </Rectangle.Style>
-                                </Rectangle>
 
-                                <TextBlock Grid.Row="0" Text="{Binding Number}" Margin="3" />
-                            </Grid>
-                        </Viewbox>
+                        <Grid  Width="30" Height="30" Margin="-1,-1,0,0">
+                            <Rectangle StrokeThickness="1" RadiusX="2" RadiusY="2">
+                                <Rectangle.Style>
+                                    <Style TargetType="{x:Type Rectangle}">
+                                        <Setter Property="Fill" Value="White"/>
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding IsChanged}" Value="True">
+                                                <Setter Property="Stroke" Value="Black"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding IsValid}" Value="False">
+                                                <Setter Property="StrokeDashArray" Value="1 1"/>
+                                            </DataTrigger>
+                                            <MultiDataTrigger>
+                                                <MultiDataTrigger.Conditions>
+                                                    <Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListBoxItem}, Path=IsSelected}" Value="True"/>
+                                                    <Condition Binding="{Binding IsChanged}" Value="false"/>
+                                                </MultiDataTrigger.Conditions>
+                                                <Setter Property="Stroke" Value="#FFe0e0e0"/>
+                                                <Setter Property="Fill" Value="#FF8da0bf"/>
+                                            </MultiDataTrigger>
+                                            <MultiDataTrigger>
+                                                <MultiDataTrigger.Conditions>
+                                                    <Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListBoxItem}, Path=IsSelected}" Value="True"/>
+                                                    <Condition Binding="{Binding IsChanged}" Value="True"/>
+                                                </MultiDataTrigger.Conditions>
+                                                <Setter Property="Stroke" Value="Black"/>
+                                                <Setter Property="Fill" Value="#FF8da0bf"/>
+                                            </MultiDataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Rectangle.Style>
+                            </Rectangle>
+
+                            <TextBlock Grid.Row="0" Text="{Binding Number}" Margin="3"
+                                       FontSize="17" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <TextBlock.Style>
+                                  <Style TargetType="TextBlock">
+                                      <Style.Triggers>
+                                          <DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListBoxItem}, Path=IsSelected}" Value="True">
+                                              <Setter Property="Foreground" Value="White"/>
+                                          </DataTrigger>
+                                      </Style.Triggers>
+                                    </Style>
+                                </TextBlock.Style>
+                            </TextBlock>
+                        </Grid>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
