--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterInfoStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterInfoStepUserControl.xaml
@@ -34,6 +34,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Border Grid.Row="0" Grid.Column="0"
@@ -115,5 +116,10 @@
 
         <TextBlock Grid.Column="0" Grid.Row="7" Text="Комментарий по времени"/>
         <TextBox Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="7" Margin="6,6,0,0" Text="{Binding DateComment, UpdateSourceTrigger=PropertyChanged}"/>
+
+        <StackPanel Grid.Column="1" Grid.Row="8" Orientation="Horizontal" Margin="6,6,0,0">
+            <RadioButton Content="STL"/>
+            <RadioButton Content="Модель" Margin="6,0,0,0"/>
+        </StackPanel>
     </Grid>
 </UserControl>
