--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/PriceListStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/PriceListStepUserControl.xaml
@@ -12,6 +12,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <local:MouthUserControl Grid.Row="0" Height="105" 
@@ -20,8 +22,18 @@
         <Grid Grid.Row="1"
               IsEnabled="{Binding ToothCard.SelectedTeeth, Converter={StaticResource NotNullToBoolConverter}}">
             <local:PriceListUserControl Margin="0,6,0,0" 
-                                    DataContext="{Binding PriceList}"/>
+                                        DataContext="{Binding PriceList}"/>
         </Grid>
+
+        <StackPanel Grid.Row="2" Orientation="Horizontal">
+            <TextBlock Text="Описание" Style="{StaticResource GroupNameStyle}" Margin="0,6,0,0"/>
+            <Button Content="Скопировать в буфер обмена" Margin="6,3,0,0"
+                    Command="{Binding ToothCard.CopyDescriptionCommand}"/>
+        </StackPanel>
         
+        <TextBox Grid.Row="3" IsReadOnly="True" IsReadOnlyCaretVisible="True" MinLines="5" MaxLines="5" Margin="0,6,0,0"
+                 VerticalScrollBarVisibility="Auto" VerticalContentAlignment="Top"
+                 Text="{Binding ToothCard.Description, Mode=OneWay}"/>
+
     </Grid>
 </UserControl>
