--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterInfoStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterInfoStepUserControl.xaml
@@ -9,6 +9,7 @@
              xmlns:viewModels="clr-namespace:Germadent.Rma.App.ViewModels"
              xmlns:catalogs="clr-namespace:Germadent.Rma.App.ViewModels.Wizard.Catalogs"
              xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
+             xmlns:model="clr-namespace:Germadent.Rma.Model;assembly=Germadent.Rma.Model"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=designMock:DesignMockMillingCenterInfoWizardStepViewModel, IsDesignTimeCreatable=True}"
@@ -27,6 +28,8 @@
             <ColumnDefinition Width="50" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -78,7 +81,7 @@
         <TextBlock Grid.Row="3" Grid.Column="0" Text="ФИО техника" VerticalAlignment="Center"
                    ToolTip="{x:Static properties:Resources.Tooltip_RequredField}"
                    HorizontalAlignment="Right" Margin="0,6,0,0" />
-       
+
         <controls:AutoCompleteTextBox Grid.Row="3" Grid.Column="1" Margin="6,6,0,0"
                                       Text="{Binding ResponsiblePerson, UpdateSourceTrigger=PropertyChanged}" 
                                       DisplayMember="FullName"
@@ -119,16 +122,27 @@
         <TextBlock Grid.Column="0" Grid.Row="7" Text="Комментарий по времени"/>
         <TextBox Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="7" Margin="6,6,0,0" Text="{Binding DateComment, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <TextBlock Grid.Row="8" Grid.Column="0" Text="Цена"/>
-        <StackPanel Grid.Row="8" Grid.Column="1" Orientation="Horizontal" Margin="6,6,0,0">
+        <TextBlock Grid.Row="8" Grid.Column="0" Text="Цвет каркаса"/>
+        <ComboBox Grid.Row="8" Grid.Column="1" Margin="6,6,0,0" Width="300" HorizontalAlignment="Left"
+                  ItemsSource="{Binding CarcassColors}"
+                  SelectedItem="{Binding SelectedCarcassColor}">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="{x:Type model:AttributeDto}">
+                    <TextBlock Text="{Binding AttributeValue}" />
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+
+        <TextBlock Grid.Row="9" Grid.Column="0" Text="Цена"/>
+        <StackPanel Grid.Row="9" Grid.Column="1" Orientation="Horizontal" Margin="6,6,0,0">
             <RadioButton Content="Модель" Margin="0,0,0,0"
                          IsChecked="{Binding Stl, Converter={StaticResource InvertBoolConverter}}"/>
             <RadioButton Content="STL"  Margin="6,0,0,0"
                          IsChecked="{Binding Stl}"/>
         </StackPanel>
 
-        <TextBlock Grid.Row="9" Grid.Column="0" Text="Тип расчета"/>
-        <StackPanel Grid.Row="9" Grid.Column="1" Orientation="Horizontal" Margin="6,6,0,0">
+        <TextBlock Grid.Row="10" Grid.Column="0" Text="Тип расчета"/>
+        <StackPanel Grid.Row="10" Grid.Column="1" Orientation="Horizontal" Margin="6,6,0,0">
             <RadioButton Content="Наличный"
                          IsChecked="{Binding Cashless, Converter={StaticResource InvertBoolConverter}}"/>
             <RadioButton Content="Безналичный" Margin="6,0,0,0"
