--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterAdditionalEquipmentStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterAdditionalEquipmentStepUserControl.xaml
@@ -12,15 +12,16 @@
     <Grid IsSharedSizeScope="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Row="0" Grid.Column="0" Text="Дополнительная оснастка" FontSize="10"/>
-        <DataGrid Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" IsReadOnly="False" Margin="0,6,0,0" Width="300"
+        <DataGrid Grid.Row="1" Grid.Column="0" Grid.RowSpan="3" IsReadOnly="False" Margin="0,6,0,0" Width="300"
                   ItemsSource="{Binding Equipments}"
                   AlternationCount="2">
             <DataGrid.Columns>
@@ -76,7 +77,8 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </ScrollViewer>
-        <TextBox Grid.Column="1" Grid.Row="2" Height="60" VerticalAlignment="Bottom" Margin="12,6,6,0" VerticalContentAlignment="Top" TextWrapping="Wrap" 
+        <TextBlock Grid.Row="2" Grid.Column="1" Text="Описание работ" FontSize="10" Margin="12,0,0,0"/>
+        <TextBox Grid.Row="3" Grid.Column="1" Height="60" VerticalAlignment="Bottom" Margin="12,6,6,0" VerticalContentAlignment="Top" TextWrapping="Wrap" 
                  Text="{Binding WorkDescription, UpdateSourceTrigger=PropertyChanged}"/>
 
     </Grid>
