--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Pricing/PriceListEditorWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Pricing/PriceListEditorWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:Germadent.Rma.App.Views"
         xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
         xmlns:pricing="clr-namespace:Germadent.Rma.App.Views.Pricing"
+        xmlns:controls="clr-namespace:Germadent.UI.Controls;assembly=Germadent.UI"
         mc:Ignorable="d"
         Title="Редактирование прайслистов" 
         MinHeight="450"
@@ -23,7 +24,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TabControl BorderThickness="0">
+        <TabControl x:Name="TabControl" BorderThickness="0">
             <TabItem Header="Фрезерный центр"
                      DataContext="{Binding MillingCenterPriceListEditor}">
                 <pricing:PriceListEditorControl Margin="12,6,12,0"/>
@@ -34,8 +35,22 @@
             </TabItem>
         </TabControl>
 
-        <Separator Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,12,0,12"/>
+        <Separator Grid.Row="1" Grid.Column="0" Margin="0,12,0,12"/>
 
-        <Button Grid.Row="2" Width="100" Content="Закрыть" HorizontalAlignment="Right" IsCancel="True" Margin="0,0,12,12"/>
+        <Grid Grid.Row="2" Margin="12,0,12,12">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <controls:BusyIndicator Grid.Column="0" IsBusy="{Binding IsBusy}" Fill="Gray"
+                                    Width="24" Height="24" Margin="-6"/>
+
+            <TextBlock Grid.Column="1" Text="{Binding BusyReason}" Margin="12,0,0,0"
+                       VerticalAlignment="Center"/>
+
+            <Button Grid.Column="2" Width="100" Content="Закрыть" HorizontalAlignment="Right" IsCancel="True" Margin="6,0,0,0" Height="23"/>
+        </Grid>
     </Grid>
 </Window>
