--- a/src/Utils/CorrectionConstructionFile/View/MainWindow.xaml
+++ b/src/Utils/CorrectionConstructionFile/View/MainWindow.xaml
@@ -1,9 +1,8 @@
-﻿<Window x:Class="Corcon.View.MainWindow"
+﻿<Window x:Class="Germadent.CorrectionConstructionFile.App.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Corcon"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Title="MainWindow" Height="800" Width="800" FontSize="14">
@@ -28,15 +27,13 @@
         </TabItem>
         <TabItem Header="Словарь">
             <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition MinHeight="640"/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <DataGrid Grid.Row="0" Grid.Column="0" Margin="3,3,3,3" ItemsSource="{Binding ImplantDict}"/>
+                <DataGrid Grid.Row="0" Grid.Column="0" Margin="6" ItemsSource="{Binding ImplantDict}"
+                          AlternationCount="2">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Ключ" Binding="{Binding Key}"/>
+                        <DataGridTextColumn Header="Значение" Width="*" Binding="{Binding Value}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
             </Grid>
         </TabItem>
     </TabControl>
