--- a/src/Utils/CorrectionConstructionFile/App.xaml
+++ b/src/Utils/CorrectionConstructionFile/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="Germadent.CorrectionConstructionFile.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Startup="App_OnStartup">
+             Startup="App_OnStartup"
+             Exit="App_OnExit">
     <Application.Resources>
          <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
