--- a/src/Utils/CorrectionConstructionFile/View/MainWindow.xaml
+++ b/src/Utils/CorrectionConstructionFile/View/MainWindow.xaml
@@ -8,7 +8,7 @@
         WindowStartupLocation="CenterScreen"
         Title="CorCon" 
         MinHeight="400"
-        Height="500" 
+        Height="600" 
         MinWidth="400"
         Width="600" 
         d:DataContext="{d:DesignInstance {x:Type designTime:DesignMockMainViewModel}, IsDesignTimeCreatable=False}">
@@ -25,11 +25,11 @@
                         Command="{Binding OpenProcesingXmlDocumentCommand}"/>
 
                 <TextBlock Grid.Row="1" Margin="6,0,0,0">
-                    <Run Text="Информация:"/>
+                    <Run Text="Файл:"/>
                     <Run Text="{Binding FullFileName, Mode=OneWay}" FontWeight="SemiBold"/>
                 </TextBlock>
 
-                <TextBox Grid.Row="2" Margin="6" VerticalScrollBarVisibility="Auto" Text="{Binding ProcessReport}"/>
+                <TextBox Grid.Row="2" Margin="6" VerticalScrollBarVisibility="Auto" VerticalAlignment="Top" TextWrapping="Wrap" Text="{Binding ProcessReport}"/>
             </Grid>
         </TabItem>
         <TabItem Header="Словарь">
