--- a/src/Utils/CorrectionConstructionFile/View/AddImplantSystemWindow.xaml
+++ b/src/Utils/CorrectionConstructionFile/View/AddImplantSystemWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Germadent.CorrectionConstructionFile.App.View.AddDictionaryItemWindow"
+﻿<Window x:Class="Germadent.CorrectionConstructionFile.App.View.AddImplantSystemWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,20 +7,20 @@
         xmlns:helpers="clr-namespace:Germadent.UI.Helpers;assembly=Germadent.UI"
         xmlns:designTime="clr-namespace:Germadent.CorrectionConstructionFile.App.View.DesignTime"
         mc:Ignorable="d"
-        SizeToContent="WidthAndHeight"
         MinWidth="400"
+        Width="400"
+        Height="300"
+        MinHeight="300"
         Title="{Binding Title}"
-        ResizeMode="NoResize"
         ShowInTaskbar="False"
         WindowStartupLocation="CenterOwner"
         Background="{x:Static SystemColors.ControlBrush}"
-        d:DataContext="{d:DesignInstance {x:Type designTime:DesignMockAddDictionaryItemViewModel}, IsDesignTimeCreatable=False}"
+        d:DataContext="{d:DesignInstance {x:Type designTime:DesignMockAddImplantSystemViewModel}, IsDesignTimeCreatable=False}"
         FocusManager.FocusedElement="{Binding ElementName=nameTextBox}">
     <Grid Margin="12">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
@@ -29,17 +29,24 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="Ключ" VerticalAlignment="Center" Margin="0,6,0,0"/>
-        <TextBox x:Name="nameTextBox" Grid.Row="1" Grid.Column="1" Margin="6,6,0,0"
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="Название" VerticalAlignment="Center" Margin="0,6,0,0"/>
+        <TextBox x:Name="nameTextBox" Grid.Row="0" Grid.Column="1" Margin="6,6,0,0"
                  Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <TextBlock Grid.Row="2" Grid.Column="0" Text="Значение" VerticalAlignment="Center" Margin="0,6,0,0"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="6,6,0,0" 
-                 Text="{Binding Value, UpdateSourceTrigger=PropertyChanged}"/>
+        <DataGrid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,6,0,0"
+                  IsReadOnly="False"
+                  ItemsSource="{Binding Values}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Ключ" Width="Auto"
+                                    Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+                <DataGridTextColumn Header="Значение" Width="*"
+                                    Binding="{Binding Value, UpdateSourceTrigger=PropertyChanged}"/>
+            </DataGrid.Columns>
+        </DataGrid>
 
-        <Separator Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="-12,12,-12,12"/>
+        <Separator Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="-12,12,-12,12"/>
 
-        <StackPanel Grid.Row="4" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
+        <StackPanel Grid.Row="3" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="OK" Width="100" IsDefault="True"
                     Command="{Binding OkCommand}"
                     helpers:WindowCloseHelper.DialogResult="True"/>
