--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/LabInfoStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/LabInfoStepUserControl.xaml
@@ -138,7 +138,7 @@
         <StackPanel Grid.Row="10" Grid.Column="1" Orientation="Horizontal" Margin="6,6,0,0">
             <RadioButton Content="Premium" Margin="0,0,0,0"
                          IsChecked="{Binding Stl, Converter={StaticResource InvertBoolConverter}}"/>
-            <RadioButton Content="Standatd"  Margin="12,0,0,0"
+            <RadioButton Content="Standard"  Margin="12,0,0,0"
                          IsChecked="{Binding Stl}"/>
         </StackPanel>
 
